--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
-1 Help message
-DB Exclusive
-    1 Actually save forms to a DB
-    1 View all responses
+1 Actually save forms to a DB
+1 View all responses
+1 Make file upload work
 
 2 Completing forms online
 
@@ -18,3 +17,4 @@ Required, disallowed roles, auto accept
 Give roles after completing a form
 Selecting where a form is completed
 Only allow forms to be completed in the chosen place
+Help message
